--- a/src/components/Day.css
+++ b/src/components/Day.css
@@ -13,6 +13,7 @@
 .event{
     display: flex;
     flex-direction: column;
+    padding: 5px;
 }
 .event > h2 {
     font-size: .85em;
@@ -27,4 +28,9 @@
     width: 80%;
     align-self: center;
     margin: 5px;
+}
+
+.event.important{
+    background: rgba(255,255,255, .45);
+    border-radius: 15px;
 }
