--- a/src/components/Day.css
+++ b/src/components/Day.css
@@ -1,13 +1,25 @@
 .Day{
     width: 20%;
-    margin: 5px;
+    margin-right: 4px;
+    margin-left: 4px;
+    margin-top: 0px;
 }
 
 .Day > h1 {
     background: white;  
     text-transform: uppercase;
     font-size: 1.2em;
-    color: rgb(48, 48, 48)
+    color: rgb(48, 48, 48);
+    margin: 0px;
+
+}
+
+.Day > .line {
+    width: 100%;
+    height: 1px;
+    background: grey;
+    margin-top: 8px;
+    margin-bottom: 4px;
 }
 
 .event{
@@ -30,7 +42,7 @@
     margin: 5px;
 }
 
-.event.important{
+.important{
     background: rgba(255,255,255, .45);
     border-radius: 15px;
 }
