--- a/src/components/calendar.css
+++ b/src/components/calendar.css
@@ -24,7 +24,7 @@ body{
 .weeklyHead{
     display: flex;
     justify-content: center;
-    
+    margin: -5px;
 }
 
 .weeklyHead > h1{
@@ -35,3 +35,25 @@ body{
 .weeklyDisplay{
     display: flex;
 }
+
+i {
+    border: solid black;
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    padding: 3px;
+    margin-top: 0px;
+  }
+  
+  .right {
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+    margin-right: 10px;
+    margin-left: 2px;
+  }
+  
+  .left {
+    transform: rotate(135deg);
+    -webkit-transform: rotate(135deg);
+    margin-right: 2px;
+    margin-left: 10px;
+  }
