--- a/src/components/calendar.css
+++ b/src/components/calendar.css
@@ -1,11 +1,18 @@
+html{
+    height: 100vh;
+    width: 100vw;
+    margin: 0px;
+}
+
 body{
     margin: 0px;
 }
 
+
 .Calendar{
+    height:95vh;
     display: flex;
     border: 18px solid rgb(44, 67, 98);
-
 }
 
 .navbar{
