--- a/src/components/SearchBar.css
+++ b/src/components/SearchBar.css
@@ -1,11 +1,28 @@
+.searchForm {
+    border: 2px solid #d7d7d7;
+    overflow: hidden;
+    width: 20%;
+    height: 4vh;
+    width: 20%;
+    display: block;
+    box-sizing: border-box; 
+}
 .boutonLoupe {
     height: 30px;
-    justify-content: center;
-    position: absolute;
+    background-color: rgb(250, 188, 22);
+    border: 0;
+    float: right;
+    padding: 0px 10px 3px;
+   
 }
 .loupe{
     width: 18px;
-    position: absolute;
+    position: center;
     right: 3%;
     top: -1%;
+}
+
+
+.inputSearch{
+    border: 0;
 }
