--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -3,20 +3,24 @@ Form {
   flex-direction: column;
   align-items: center;
   font-size: 1.3em;
-  color:black;
-  border: 1px solid black;
+  /* color:black;
+  border: 1px solid black; */
   border-radius: 10px 10px 10px 10px;
   width: 50vw;
   margin: auto;
-  background-color: #c0e2ea;
+  padding-bottom: 5%;
+  background-color: rgba(211, 232, 237, .5);
+
 }
 
-/* .container {
-  background-image: url("https://trello-attachments.s3.amazonaws.com/5cd7f83b61edae67f973f62b/5cef3fb685ca6344b8fa6124/c58714526b670aa011615523b89ef02d/EXPORT_SOMMAIRE_4.jpg");
+.container {
+  background-image: url(./assets/bgback.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
-.container::after {
+/* .container::after {
   content:"";
-  background: url("https://trello-attachments.s3.amazonaws.com/5cd7f83b61edae67f973f62b/5cef3fb685ca6344b8fa6124/c58714526b670aa011615523b89ef02d/EXPORT_SOMMAIRE_4.jpg");
+  background: url ("https://trello-attachments.s3.amazonaws.com/5cf68039ee406a2dd9efa70d/650x336/0e0089c31f03a7e42611754c7c283920/94580db71e1a349.jpg");
   opacity: 0.5;
   top: 0;
   left: 0;
@@ -24,16 +28,26 @@ Form {
   right: 0;
   position: absolute;
   z-index: -1;
-} */
+} */ */
 .hiddenInput{
   display:none;
 }
 .input-form {
 width: 41vw;
+height: 5vh;
 border-bottom: 1px solid black;
+border-top-style: none;
+border-right-style: none;
+border-left-style: none;
+border-bottom-style:none;
+background-color: #d3e8ed;
+padding-top:2%;
+box-shadow: -1px 2px 6px 2px rgba(0, 0, 0, 0.3) inset;
 }
 fieldset {
 width: 40VW;
+margin-top: 2%;
+margin-bottom: 2%;
 }
 .button-selectform {
     border: 1px solid black;
