add use in login with axios.post

--- a/src/components/calendar.css
+++ b/src/components/calendar.css
@@ -22,7 +22,7 @@ body{
 
 .weekly{
     width: 80%;
-    background: url(../pictures/background-test_00.png);
+    background: url(../pictures/backg.png);
     background-size: 140%;
     
 }
