--- a/src/screen/SelectionForm.css
+++ b/src/screen/SelectionForm.css
@@ -1,8 +1,30 @@
 .container-button {
     display:flex;
     flex-direction: column;
-    justify-content: space-around;
-    background-color: black;
+    justify-content: space-between;
+    background-color: rgb(127, 127, 127);
     height:100vh;
-    width: 15vw;
+    width: 19vw;
    }
+.event-managment {
+    margin-top: -10vh;
+}
+.event-button {
+    font-size:0.9em;
+}
+.deco-managment {
+    margin-top: -10vh;
+}
+h4 {
+    color: white;
+    text-decoration-line: underline;
+    padding-left: 1vw;
+}
+a {
+    padding-left: 2vw;
+    font-size:1em;
+}
+a:hover {
+    text-decoration-line: underline;
+}
+a:
