--- a/src/components/SearchBar.css
+++ b/src/components/SearchBar.css
@@ -22,3 +22,11 @@
     width: 12px;
 }
 
+
+
+@media screen and (min-width: 10px) and (max-width: 1024px) {
+        .searchForm {
+          display: none;
+          
+      }
+}
