--- a/src/components/Monthly.css
+++ b/src/components/Monthly.css
@@ -15,6 +15,13 @@ body{
     border: 18px solid rgb(44, 67, 98);
 }
 
+@media screen and (min-width: 10px) and (max-width: 1024px) {
+    .Calendar{
+        border: 0;
+        
+
+    }
+}
 .navbar{
     width: 25%;
 
