--- a/src/components/SearchBar.css
+++ b/src/components/SearchBar.css
@@ -10,7 +10,7 @@
 
 .boutonLoupe{
     height: 2.9vh;
-    background: rgb(250,188,22);
+    background: #bc33e9;
     border: none;
     position: absolute;
     left: 21.5vmax;
