--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -17,6 +17,12 @@
   background-image: url("https://images.unsplash.com/photo-1511184150666-9bb7d41a88f4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80");
   background-repeat: no-repeat;
   background-size: cover;
+  width:100%;
+  text-align: center;
+}
+.screen-form{
+    display: flex;
+    flex-direction: row;
 }
 
 .input-form {
@@ -36,6 +42,7 @@ fieldset {
 width: 40VW;
 margin-top: 2%;
 margin-bottom: 2%;
+
 }
 .checkradio {
   display: flex;
