--- a/src/components/Monthly.css
+++ b/src/components/Monthly.css
@@ -15,6 +15,21 @@ body{
     border: 18px solid rgb(44, 67, 98);
 }
 
+.calendar-month {
+  width: 50%;
+  padding: 5px;
+  line-height: 25px;
+  display: block;
+  border-width: 1px;
+  border-style: solid;
+  border-color: transparent;
+  border-radius: 3px;
+  -webkit-border-radius: 3px;
+}
+
+
+
+
 .today > h3 {
     border: 3px;
     border-color: rebeccapurple;
