--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -1,52 +1,124 @@
-.login{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+/* Form Sign In "connection" */
+.adminFormIn{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px 10px 10px 10px;
+  background: #f0e8e8;
+  line-height: 7vh;
+  padding: 5%;
+  margin-left: 31%;
+  margin-top: 22%;
+  height: 30vh;
+  max-width: 27vw;
+  box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3)
 }
 
-.adminForm{
+/* Form Sign up "Enregistrement" */
+.adminFormUp{
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   border-radius: 10px 10px 10px 10px;
   background: rgb(240, 232, 232);
+  line-height: 5vh;
   padding: 5%;
   margin-left: 31%;
   margin-top: 22%;
   height: 30vh;
-  max-width: 40vw;
+  max-width: 27vw;
   box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3)
 }
-   
+
+.login{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+/* Logo Revus & Corrigés */
 .iconUser{
-  width: 32%;
-  margin-top: -25%;
-  margin-left: 2%;
+  width: 29%;
+  margin-top: -38vh;
+  margin-left: 1vw;
   position: absolute;
 }
 
-.FormTitle{
-  min-height: 40px;
-}
-
-.FormTitle__Link:hover{
-  color: #707C8B;
-  font-size: 1.3em;
-  margin: 0 10px;
-  padding-bottom: 5px;
-  font-size: 20px;
-  transition: 1s ease-in-out;
-}
-
-.FormTitle__Link--Active{
-  color: black;
-  border-bottom: 1px solid #199087;
-  transform: translateX(30px);
-  transition: 1s ease-in-out;
-  font-size: 20px;
-}
-
+/* Button Sign up*/
 .btnSignUp{
   margin-top: 3vh;
+}
+
+/* Position title "Connexion"*/
+.FormTitleIn{
+  display: flex;
+  justify-content: center;
+  padding-top: -4vh;
+  position: relative;
+  z-index: 2;
+  top: -3.2vh;
+  font-size: 1.2em;
+}
+
+/* Effect hightlight title */
+.FormTitleIn__Link:after {
+	content: '';
+	display: block;
+	margin: auto;
+	height: 1px;
+	width: 0;
+	background: transparent;
+	transition: width .5s ease, background-color .2s ease;
+}
+
+/* Effect hightlight title on Hover */
+.FormTitleIn__Link--Active:hover:after {
+	width: 90%;
+	background: #444;
+}
+
+/* Postion title "Enregistrement" */
+.FormTitleUp{
+  display: flex;
+  justify-content: center;
+  padding-top: -4vh;
+  position: relative;
+  z-index: 2;
+  top: -3.2vh;
+  font-size: 1.2em;
+}
+
+
+.FormTitleUp__Link:after {
+	content: '';
+	display: block;
+	margin: auto;
+	height: 1px;
+	width: 0;
+	background: transparent;
+	transition: width .5s ease, background-color .2s ease;
+}
+
+.FormTitleUp__Link:hover:after {
+	width: 92%;
+  background: #444;
+}
+
+
+.FormTitleUp{
+  display: flex;
+  justify-content: center;
+  position: relative;
+  z-index: 2;
+  top: -2vh;
+}
+
+.FormTitleIn > a{
+  margin: 16px;
+}
+
+.FormTitleUp > a{
+  margin: 16px;
 }
