--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -1,3 +1,9 @@
+.Form {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
 .checkbox {
     display:flex;
     justify-content: space-around;
