--- a/src/components/Day.css
+++ b/src/components/Day.css
@@ -83,6 +83,6 @@
 }
 
 .important{
-    background: rgba(255,255,255, .45);
+    background: rgba(168, 168, 168, 0.45);
     border-radius: 15px;
 }
