--- a/src/components/Day.css
+++ b/src/components/Day.css
@@ -1,3 +1,4 @@
+/* DESKTOP */
 .dayDesktop{
     width: 20%;
     margin-right: 4px;
@@ -11,7 +12,6 @@
     font-size: 1.2em;
     color: rgb(48, 48, 48);
     margin: 0px;
-
 }
 
 .dayDesktop > .line {
@@ -21,6 +21,33 @@
     margin-top: 8px;
     margin-bottom: 4px;
 }
+
+.event{
+    display: flex;
+    flex-direction: column;
+    padding: 5px;
+}
+.event > h2 {
+    font-size: .85em;
+}
+
+.event > p {
+    font-size: .75em;
+    margin: 0px;
+}
+
+.event > img {
+    width: 80%;
+    align-self: center;
+    margin: 5px;
+}
+
+.important{
+    background: rgba(255, 255, 255, 0.45);
+    border-radius: 15px;
+}
+
+/* MOBILE */
 
 .dayMobile {
     margin-right: 4px;
@@ -34,7 +61,6 @@
     font-size: 1.2em;
     color: rgb(48, 48, 48);
     margin: 0px;
-
 }
 
 .dayMobile > .line {
@@ -86,32 +112,6 @@
     align-items: center;
     width: 100%;
 }
-
-.event{
-    display: flex;
-    flex-direction: column;
-    padding: 5px;
-}
-.event > h2 {
-    font-size: .85em;
-}
-
 .dayMobile > .event > h2 {
     text-transform: uppercase;
-}
-
-.event > p {
-    font-size: .75em;
-    margin: 0px;
-}
-
-.event > img {
-    width: 80%;
-    align-self: center;
-    margin: 5px;
-}
-
-.important{
-    background: rgba(255, 255, 255, 0.45);
-    border-radius: 15px;
 }
