--- a/src/components/css/Monthly.css
+++ b/src/components/css/Monthly.css
@@ -1,17 +1,9 @@
 html{
     height: 100vh;
     width: 100vw;
-    margin: 0px;
 }
-
-body{
-    margin: 0px;
-}
-
 
 .Calendar{
-    
-    
     border: 18px solid rgb(44, 67, 98);
 }
 
@@ -35,8 +27,6 @@ body{
   font-size: x-large;
   cursor: pointer;
 }
-
-
 
 .today > h3 {
     color: rgb(211, 24, 24);
@@ -63,19 +53,18 @@ opacity: 0.5;
     cursor: pointer;
 }
 
-h3 {
+.centerDay {
     display: flex;
     justify-content: center;
 }
 
 .navbar{
     width: 25%;
-
 }
 
 .monthly{
-    width: 100%;
-    background: url(../pictures/backg.png);
+    width: 83%;
+    background: url(../../pictures/backg.png);
     background-size: 140%;
 }
 
@@ -96,7 +85,6 @@ h3 {
     grid-template-rows: auto;
     grid-gap: 50% 12%;
     font-size: 1.1em;
-    
 }
 
 .month {
@@ -120,7 +108,6 @@ h3 {
     
 }
 
-
 i {
     border: solid black;
     border-width: 0 3px 3px 0;
@@ -128,25 +115,25 @@ i {
     padding: 3px;
     margin-top: 0px;
     cursor: pointer;
-  }
+}
   
-   .right {
+.right {
     transform: rotate(-45deg);
     -webkit-transform: rotate(-45deg);
     margin-right: 10px;
     margin-left: 2px;
-  }
-  
-  .left {  
+}
+
+.left {  
     transform: rotate(135deg);
     -webkit-transform: rotate(135deg);
     margin-right: 2px;
     margin-left: 10px;
-  }
-  
-  .arrows {
-      display: flex;
-      justify-content: space-around;
-  }
+}
+
+.arrows {
+    display: flex;
+    justify-content: space-around;
+}
 
   
