--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -1,4 +1,5 @@
-.Form {
+.Formevent,
+.Formvideos {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -23,6 +24,9 @@
     justify-content: space-between;
     align-items: center;
     padding-top: 3%;
+}
+.Role-contact {
+    text-decoration: underline cadetblue;
 }
 .button-submit {
     border-radius: 5px 5px 5px 5px;
