test for listing viedos in screen videos and update state for forms

--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -1,5 +1,7 @@
 .Formevent,
-.Formvideos {
+.Formvideos,
+.Formcinema, 
+.Formretro {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
