--- a/src/screen/Events.css
+++ b/src/screen/Events.css
@@ -6,13 +6,19 @@
 }
 .screenCinema{
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
+    flex-wrap: nowrap;
 }
 .screenVideo{
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
+    flex-wrap: nowrap;
 }
 .screenRetro{
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
+    flex-wrap: nowrap;
 }
