--- a/src/screen/MenuAdmin.css
+++ b/src/screen/MenuAdmin.css
@@ -1,10 +1,12 @@
+
+
 .container-button {
     display:flex;
     flex-direction: column;
     justify-content: space-between;
     background-color: rgb(127, 127, 127);
     height:100vh;
-    width: 20vw;
+    width: 75%;
    }
 .event-managment {
     margin-top: -10vh;
@@ -19,7 +21,6 @@
 
 .all {
     display: flex;
-    z-index: 2;
 }
 
 .getdata {
@@ -29,7 +30,7 @@
     grid-gap: 2vw;
     margin-top: 2vw;
     margin-left: 2vw;
-
+    padding-right: 4vw;
 }
 
 .data {
@@ -42,8 +43,9 @@ p {
 }
 
 img {
-    max-width:15vw;
+    max-width:14vw;
     height:auto;
+
 }
 
 h4 {
