--- a/src/components/css/Menu.css
+++ b/src/components/css/Menu.css
@@ -9,7 +9,7 @@
   width: 90%;
 }
 
-a {
+.aLinkRC {
 size: 20px;
 font-family: 'Oswald', 'sans-serif';
 line-height: 2;
@@ -26,7 +26,7 @@ letter-spacing: .06em;
 }
 
 @media screen and (min-width: 10px) and (max-width: 1024px) {
-  a {
+  .aLinkRC {
     display: none;
   }
 
