--- a/src/components/css/Form.css
+++ b/src/components/css/Form.css
@@ -1,62 +1,67 @@
-.videoForm .formCine .form-event{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  font-size: 1.3em;
-  /* color:black;
-  border: 1px solid black; */
-  border-radius: 10px 10px 10px 10px;
-  width: 50vw;
-  margin: auto;
-  padding-bottom: 5%;
-  background-color: rgba(211, 232, 237, .7);
+.screen {
+    display: flex;
+    flex-direction: row;
 }
-
-.container {
-  background-image: url(./assets/bgback.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
+.Formevent,
+.Formvideos,
+.Formcinema, 
+.Formretro {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    width:45vw;
+    padding-left: 12vw;
+    background-color: rgba(250, 252, 255,0.4);
+    border-radius: 10px 10px 10px 10px;
+    margin: auto;
+    /* margin-top: 12vh; */
 }
-
-.input-form {
-width: 41vw;
-height: 5vh;
-border-bottom: 1px solid black;
-border-top-style: none;
-border-right-style: none;
-border-left-style: none;
-border-bottom-style:none;
-background-color: #d3e8ed;
-padding-top:2%;
-box-shadow: -1px 1px 6px 1px rgba(0, 0, 0, 0.3) inset;
+.cssevent{
+    background-image: url(https://pbs.twimg.com/media/DmgHJ8eX0AAolAO.jpg);
+    background-size: cover;
+    background-position: right; 
+    background-blend-mode: hard-light;
+    width: 80vw;
 }
-
-fieldset {
-width: 40VW;
-margin-top: 2%;
-margin-bottom: 2%;
+.csscinema{
+    background-image: url(https://pbs.twimg.com/media/D-nSD28WkAAZi3Q.jpg);
+    background-size: cover;
+    width: 80vw;
 }
-.checkradio {
-  display: flex;
-  justify-content: space-evenly;
+.cssvideo{
+    background-image: url(https://revusetcorriges.files.wordpress.com/2017/12/sceno-la-planete-des-vampires.png?w=1024);
+    background-position-x: -18vw;
+    background-size: cover;
+    width: 80vw;
 }
-.button-selectform {
-    border: 1px solid black;
-    height: 5vh;
-    margin-left: 2%;
-    margin-top:2%;
-    border-radius: 5px 5px 5px 5px;
-    background-color: white;
-}
-.button-submit {
-    border: 1px solid black;
-    height: 5vh;
-    margin-top:5vh;
-    border-radius: 5px 5px 5px 5px;
-    background-color: white;
+.cssretro{
+    background-image: url(https://revusetcorriges.files.wordpress.com/2018/08/dorothy-arzner-et-clara-bow-sur-le-tournage-de-the-wild-party-1929-recadrc3a9e.jpg);
+    background-position-x: -10vw;
+    background-size: cover;
+    width: 80vw;
 }
 .checkbox {
     display:flex;
     justify-content: space-around;
     width: 40vw;
+    padding-top: 3%;
+}
+.contact {
+    display: flex;
+    flex-direction: column;
+    padding-top: 1%;
+    width:40vw;
+}
+.type-contact {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 3%;
+}
+.Role-contact {
+    text-decoration: underline cadetblue;
+}
+.button-submit {
+    border-radius: 5px 5px 5px 5px;
 }
