--- a/src/screen/MenuAdmin.css
+++ b/src/screen/MenuAdmin.css
@@ -76,3 +76,15 @@ h4 {
 .deleteNone{
     display : none;
 }
+
+.input-area {
+    height: 25px;
+    width: 300px;
+}
+
+.button-submit {
+    display: flex;
+    margin-top: 10px;
+    margin-left: 115px;
+    height: 30px;
+}
