--- a/src/components/css/CalendarV2.css
+++ b/src/components/css/CalendarV2.css
@@ -8,13 +8,13 @@ html{
 }
 
 .weekly{
-    width:78.5vw;
-    height: 100vh;
+    width:78vw;
+    /* height: 100vh; */
 }
 
 .calendarScreen{
     display: flex;
-    border: 18px solid rgb(44, 67, 98);
+    border: 16px solid rgb(44, 67, 98);
     height: 100vh;
 }
 
@@ -23,8 +23,8 @@ html{
 }
 
 .weeklyDesktop{
-    width: 100%;
-    height: 100vh;
+    width: 81.4vw;
+    height: 97vh;
     background: url(../../pictures/backg.png);
     background-size: 140%;
 }
